syntax = "proto3";

package talk;
option go_package = "github.com/x0y14/msnger/pkg/protobuf";

import "types.proto";


// [AUTH] SendMessage ( SendMessageRequest ) -> Message
message SendMessageRequest {
  types.Message message = 1;
}

// [AUTH] SendReadReceipt ( SendReadReceiptRequest : MessageId ) -> SendReadReceiptResult
message SendReadReceiptRequest {
  string messageId = 1;
}
message SendReadReceiptResult {}


service TalkService {
  rpc SendMessage(SendMessageRequest) returns (types.Message) {}
  rpc SendReadReceipt(SendReadReceiptRequest) returns(SendReadReceiptResult) {}
}